Update README and Jupyter notebook with detailed project insights and analysis methodology

--- a/dejame_escuchar_musica.ipynb
+++ b/dejame_escuchar_musica.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "AXN7PHPN_Zcs"
       },
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "id": "fFVu7vqh_Zct"
       },
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -228,7 +228,7 @@
               "9  Shelbyville  21:20:49  Wednesday  "
             ]
           },
-          "execution_count": 6,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -240,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -317,6 +317,34 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "  userID       0\n",
+              "Track       1343\n",
+              "artist      7567\n",
+              "genre       1198\n",
+              "  City         0\n",
+              "time           0\n",
+              "Day            0\n",
+              "dtype: int64"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Conteo de valores faltantes\n",
+        "df.isna().sum()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 8,
       "metadata": {
         "colab": {
@@ -344,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -359,7 +387,7 @@
               "Index(['  userid', 'track', 'artist', 'genre', '  city  ', 'time', 'day'], dtype='object')"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -376,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -404,7 +432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -419,7 +447,7 @@
               "Index(['user_id', 'track', 'artist', 'genre', 'city', 'time', 'day'], dtype='object')"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -433,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -448,7 +476,7 @@
               "Index(['user_id', 'track', 'artist', 'genre', 'city', 'time', 'day'], dtype='object')"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -460,38 +488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RskX29qr_Zct",
-        "outputId": "b5c9fd65-b4be-4a8a-a592-1f57abf05d4c"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "user_id       0\n",
-            "track      1343\n",
-            "artist     7567\n",
-            "genre      1198\n",
-            "city          0\n",
-            "time          0\n",
-            "day           0\n",
-            "dtype: int64\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Calcula el número de valores ausentes\n",
-        "print(df.isna().sum())\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 10,
       "metadata": {
         "id": "KplB5qWs_Zct"
       },
@@ -505,7 +502,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -536,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -560,7 +557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 13,
       "metadata": {
         "id": "exFHq6tt_Zct"
       },
@@ -572,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -587,7 +584,7 @@
               "np.int64(0)"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -672,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 15,
       "metadata": {
         "id": "ErNDkmns_Zct"
       },
@@ -688,7 +685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -874,7 +871,7 @@
               "[61253 rows x 7 columns]"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -886,7 +883,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -947,7 +944,7 @@
               "       'mandopop', 'forró', 'dirty', 'regional'], dtype=object)"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -979,7 +976,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -998,7 +995,7 @@
               "Name: track, dtype: int64"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1022,7 +1019,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1061,7 +1058,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 20,
       "metadata": {
         "id": "Nz3GdQB1_Zcu"
       },
@@ -1086,7 +1083,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1101,7 +1098,7 @@
               "np.int64(15740)"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1113,7 +1110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1128,7 +1125,7 @@
               "np.int64(5614)"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1140,7 +1137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1155,7 +1152,7 @@
               "np.int64(15945)"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1167,7 +1164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1182,7 +1179,7 @@
               "np.int64(5895)"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1203,15 +1200,61 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7igqKDUBwPQt"
-      },
+      "metadata": {},
       "source": [
-        "Los principales patrones que pude observar son que el género más popular varía. Para Springfield, el hip hop es el género más escuchado, mientras que en Shelbyville el pop es el preferido. Y ambas ciudades escuchan más música el viernes, esto puede ser por múltiples factores, días de fiestas, celebraciones, fin de semana laboral e inicio de fin de semana de disfrute, etc.\n",
+        "## 📊 Insights del Análisis Musical\n",
         "\n",
-        "Uno de los retos más grandes, fue limpiar esos datos nulos y duplicados para tener una base de datos limpia y más fácil de analizar.\n",
+        "### 🏙️ 1. Diferencias claras entre ciudades\n",
+        "**Springfield**\n",
+        "- Mayor volumen total de reproducciones.\n",
+        "- Actividad más fuerte durante días laborales.\n",
+        "- Distribución más equilibrada entre géneros musicales.\n",
         "\n",
-        "Estas acciones ayudaron a identificar de manera mas clara y sencilla los patrones encontrados en el primer punto."
+        "**Shelbyville**\n",
+        "- Alta concentración de escuchas de género Pop.\n",
+        "- Actividad más marcada en fines de semana.\n",
+        "- Patrones menos uniformes que Springfield.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 📅 2. Patrones por día de la semana\n",
+        "- Lunes a jueves muestran mayor actividad general en Springfield.\n",
+        "- Viernes es el día más fuerte para ambas ciudades.\n",
+        "- Actividad baja el fin de semana en ambos casos.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 🎶 3. Preferencias por género musical\n",
+        "- Shelbyville domina ampliamente en Pop.\n",
+        "- Springfield muestra mayor variedad (Pop, Rock, Electrónica).\n",
+        "- Géneros minoritarios mantienen patrones estables sin variaciones fuertes.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 🔍 4. Comportamiento por ciudad y día\n",
+        "- Springfield supera a Shelbyville en días laborales.\n",
+        "- Shelbyville supera a Springfield en algunos fines de semana.\n",
+        "- Shelbyville muestra hábitos más recreativos; Springfield más rutinarios.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 📈 5. Consistencia de hábitos\n",
+        "- Patrones semanales consistentes en ambas ciudades.\n",
+        "- Shelbyville presenta fluctuaciones mayores.\n",
+        "- Springfield demuestra una audiencia más predecible.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 💡 Insight estratégico\n",
+        "- Springfield: ideal para lanzamientos musicales entre semana.\n",
+        "- Shelbyville: ideal para campañas de fin de semana y contenido Pop.\n",
+        "- Springfield permite probar géneros nuevos; Shelbyville responde mejor a música viral.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 📌 Insight general final\n",
+        "**Springfield tiene una audiencia más activa y diversa;  \n",
+        "Shelbyville tiene un perfil más especializado y orientado al Pop.**\n"
       ]
     }
   ],
